--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             margin-right: 10px;
             padding: 10px 20px;
             color: #fff;
-            background-color: #000000;
+            background-color: #4CAF50;
             text-decoration: none;
             border-radius: 5px;
         }
