--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         .hero-buttons a {
             display: inline-block;
             margin-right: 10px;
+                    margin-bottom: 10PX;
+
             padding: 10px 20px;
             color: #fff;
             background-color: #4CAF50;
